# DaisyPatches

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_libs.sh
.vscode-Template/: c_cpp_properties.json  tasks.json
Calibrator/: Makefile  README.md  main.cpp
Common/: VOctCalibrationSettings.h  menu_gui.h  menu_gui.tpp
DaisyLPG/: Makefile  README.md  main.cpp
Phaseshapers/: Makefile  main.cpp  phaseshapers.cpp  phaseshapers.h
Plucky/: Makefile  README.md  main.cpp
Tests/: CMakeLists.txt  circular_buffer_tests.cpp  cmake_install.cmake  sinc_interpolator_tests.cpp  sinc_resampler_tests.cpp
UITest/: Makefile  main.cpp  menu_items.h
dsp/: CMakeLists.txt  Makefile  circular_buffer.h  delayline2.h  phaseshapers.cpp  phaseshapers.h  sinc_interpolator.cpp  sinc_interpolator.h  sinc_resampler.cpp  sinc_resampler.h  sinc_table.h  waveguide.h
scripts/: create_test_files.py  make_sinc_table.py
